# pico-c-aht20

./: CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
lib/: CMakeLists.txt
lib/include/pico_aht20/: aht20.h  communication.h  defines.h  types.h
lib/src/: aht20.c  communication.c
src/: example.c
